Fix scrollbars in equations

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -457,6 +457,7 @@ h1 {
 /*--- MATHJAX ----------------------------------------------------------------*/
 
 .MathJax_Display {
-    overflow-x: scroll;
+    overflow-x: auto;
+    overflow-y: hidden;
 }
 
